Create mathmatic functions and empty object
These functions will hopefully avoid making the other functions too messy by removing some of the
mathmatic work. The empty object created will serve to store num1, num2, and the operation
being used so that it can be used

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="display-box">
-
+            Test
         </div>
         <div class="button-panel">
             <div class="row1">
