--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button class="number" id="v7" value="7">7</button>
                 <button class="number" id="v8" value="8">8</button>
                 <button class="number">9</button>
-                <button class="number">/</button>
+                <button class="operate">/</button>
                 <button class="other"></button>
             </div>
 
@@ -26,7 +26,7 @@
                 <button class="number">4</button>
                 <button class="number">5</button>
                 <button class="number">6</button>
-                <button class="number">X</button>
+                <button class="operate">X</button>
                 <button class="other"></button>
                 
             </div>
@@ -35,7 +35,7 @@
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button class="number">-</button>
+                <button class="operate">-</button>
                 <button class="other"></button>
             </div>
 
@@ -43,8 +43,8 @@
                 <button class="number">0</button>
                 <button class="other">C</button>
                 <button class="other">.</button>
-                <button class="number">+</button>
-                <button class="number">=</button>
+                <button class="operate">+</button>
+                <button class="other">=</button>
             </div>
         </div>
     </div>
