Write code for operate() and create = addEventListener
Wrote an addEveentListener for when the = button gets clicked. This will trigger the operate
function, where first the number strings are converted to numbers, and then the correct
function is triggered based on what the operator equals (+, -, *, or /). Currently trying to
fix an issue of the operate function ONLY performing addition, even when another operate
button is clicked

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="button-panel">
             <div class="row1">
-                <button class="number" id="v7" value="7">7</button>
-                <button class="number" id="v8" value="8">8</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
                 <button class="number">9</button>
                 <button class="operate">/</button>
                 <button class="other"></button>
@@ -44,7 +44,7 @@
                 <button class="other">C</button>
                 <button class="other">.</button>
                 <button class="operate">+</button>
-                <button class="other">=</button>
+                <button class="result">=</button>
             </div>
         </div>
     </div>
