Upgrade calculation of calculator
Got calculator to effectivly make the prior calculation and trigger operate() when pressing another
operator button. This allows the user tostring together calculations without even having to
press the equal button. This was primarily done with messing around with operator function, but
ultimatley adding code to the .operate addEventListener

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div class="row4">
                 <button class="number">0</button>
-                <button class="other">C</button>
+                <button class="clear">C</button>
                 <button class="other">.</button>
                 <button class="operate">+</button>
                 <button class="result">=</button>
