Create functioning display box for calculator
After changing the display-box reference to a ID reference and modifying the CSS appropriatley
I linked displayBox to several functions in the script file that now update the numbers
being clicked, or the result of the calculation when an operator or the equal button is
clicked. This helps provide clear feedback to user on what is being calculated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="display-box">
+        <div id="display-box">
             Test
         </div>
         <div class="button-panel">
