Set up decimal button and alter operate()
Created a JS reference to the decimal button to allow users to now insert decimals into any
number at any point in the calculation. This  allows for more complex calculations to be done.
It was crucial here to change the parseInt method in the operate() function to parseFloat()

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="row4">
                 <button class="number">0</button>
                 <button class="clear">C</button>
-                <button class="other">.</button>
+                <button class="decimal">.</button>
                 <button class="operate">+</button>
                 <button class="result">=</button>
             </div>
