Attempt to complete '=' button logic and create back button
Still having the issue of calulcation logic getting screwed up when user tries to input a new
num1 and reseting, after pressing '=' button. In the meantime, I willbegin creating a backspace
button which will allow users to delete the numbers they type

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div id="display-box">
-            Test
+            0
         </div>
         <div class="button-panel">
             <div class="row1">
@@ -36,7 +36,7 @@
                 <button class="number">2</button>
                 <button class="number">3</button>
                 <button class="operate">-</button>
-                <button class="other"></button>
+                <button class="delete">←</button>
             </div>
 
             <div class="row4">
