Style calculator and fix logix error
Have completed a good amount ofthe stylingin the CSS file, mostley focusing on expanding
button size and adjusting the panel of buttons to fit calculator. ALso noticed an
error in the calculator logic when any operator button is pressed before any numbers.
Fixed so that this has no effect if done before the number buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button class="number">8</button>
                 <button class="number">9</button>
                 <button class="operate">/</button>
-                <button class="other"></button>
+                
             </div>
 
             <div class="row2">
@@ -27,8 +27,6 @@
                 <button class="number">5</button>
                 <button class="number">6</button>
                 <button class="operate">X</button>
-                <button class="other"></button>
-                
             </div>
 
             <div class="row3">
@@ -36,7 +34,6 @@
                 <button class="number">2</button>
                 <button class="number">3</button>
                 <button class="operate">-</button>
-                <button class="delete">←</button>
             </div>
 
             <div class="row4">
@@ -44,6 +41,12 @@
                 <button class="clear">C</button>
                 <button class="decimal">.</button>
                 <button class="operate">+</button>
+            </div>
+
+            <div class="row5">
+                <button class="other"></button>
+                <button class="other"></button>
+                <button class="delete">←</button>
                 <button class="result">=</button>
             </div>
         </div>
